# nano-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  nano-agent  nano_agent.py  pyproject.toml
.github/workflows/: ci.yml
src/nano_agent/: agent.py  cli.py  core.py  platforms.py  tools.py  ui.py
src/nano_agent/tools/: __init__.py  _apply_patch_impl.py  _bash_impl.py  _common.py  _files_impl.py  _images_impl.py  _internal.py  _output_impl.py  _search_impl.py  _selection_impl.py  _stream_impl.py  _tool_results_impl.py  _web_fetch_impl.py  apply_patch.py  base.py  bash.py  descriptions.py  files.py  images.py  registry.py  results.py  runtime.py  schemas.py  search.py  skill.py  view_image.py  web_fetch.py
tests/: helpers.py  test_agent.py  test_core.py  test_platforms.py  test_tool_apply_patch.py  test_tool_bash.py  test_tool_files.py  test_tool_runtime_helpers.py  test_tool_search.py  test_tool_selection.py  test_tool_skill.py  test_tool_view_image.py  test_tool_web_fetch.py  test_tools.py
